Implement County badges on county maps.

--- a/contaePages/naContae25.html
+++ b/contaePages/naContae25.html
@@ -61,7 +61,7 @@
      
             </div>
 
-                    <div id="output">Co. Árd Mhacha</div>
+                    <div id="output">Co. Ard Mhacha</div>
                     <div id="grid"></div>
                     <div id="player"></div>
                     <div id="inventory">
