--- a/contaePages/naContae28.html
+++ b/contaePages/naContae28.html
@@ -63,7 +63,7 @@
      
             </div>
 
-                    <div id="output">Co. Na Gaillimhe</div>
+                    <div id="output">Co. na Gaillimhe</div>
                     <div id="grid"></div>
                     <div id="player"></div>
                     <div id="inventory">
