--- a/contaePages/naContae32.html
+++ b/contaePages/naContae32.html
@@ -62,7 +62,7 @@
      
             </div>
 
-                    <div id="output">Co. Thír Éoghain</div>
+                    <div id="output">Co. Thír Eoghain</div>
                     <div id="grid"></div>
                     <div id="player"></div>
                     <div id="inventory">
