--- a/contaePages/naContae9.html
+++ b/contaePages/naContae9.html
@@ -65,7 +65,7 @@
      
             </div>
 
-                    <div id="output">Co Fhear Manach</div>
+                    <div id="output">Co. Fhear Manach</div>
                     <div id="grid"></div>
                     <div id="player"></div>
                     <div id="inventory">
