--- a/contaePages/naContae1.html
+++ b/contaePages/naContae1.html
@@ -64,7 +64,7 @@
      
             </div>
 
-                    <div id="output">Co. Uibh Fhailí</div>
+                    <div id="output">Co. Uíbh Fhailí</div>
                     <div id="grid"></div>
                     <div id="player"></div>
                     <div id="inventory">
