--- a/contaePages/naContae13.html
+++ b/contaePages/naContae13.html
@@ -66,7 +66,7 @@
      
             </div>
 
-                    <div id="output">Co. Doire</div>
+                    <div id="output">Co. Dhoire</div>
                     <div id="grid"></div>
                     <div id="player"></div>
                     <div id="inventory">
