--- a/contaePages/naContae1.html
+++ b/contaePages/naContae1.html
@@ -66,6 +66,7 @@
 
                     <div id="output">Co. Uíbh Fhailí</div>
                     <div id="grid"></div>
+                    <div id="badgeSmall"></div>
                     <div id="player"></div>
                     <div id="inventory">
                         <!-- img src="../../../images/locals1.png" data-x="72" data-y="84" -->
