Implement little-shield to show player-team.

--- a/contaePages/naContae17.html
+++ b/contaePages/naContae17.html
@@ -50,7 +50,7 @@ rrrrrrr...^^..........^^^MMMMMMMMMMMM..*..............~
                             <div class="item" id="dealbh">
                                 <div class="item" id="badge"</div>
 
-                                <p id="bearla">Hover on Irish text for English</p>
+                                <p id="bearla"></p>
                             </div>
 
 
@@ -63,7 +63,10 @@ rrrrrrr...^^..........^^^MMMMMMMMMMMM..*..............~
 
             <div id="output">Co. Phort Láirge</div>
                     <div id="grid"></div>
-                    <div id="player"></div>
+                    <div id="player">
+                    
+                        <div id="badgeSmall"></div>
+                    </div>
                     <div id="inventory">
                         <!-- img src="../../../images/locals1.png" data-x="72" data-y="84" -->
                 </div>
