--- a/contaePages/naContae30.html
+++ b/contaePages/naContae30.html
@@ -52,7 +52,7 @@
                             <div class="item" id="dealbh">
                                 <div class="item" id="badge"</div>
 
-                                <p id="bearla">Hover on Irish text for English</p>
+                                <p id="bearla"></p>
                             </div>
 
 
@@ -65,7 +65,10 @@
 
                     <div id="output">Co. An Chláir</div>
                     <div id="grid"></div>
-                    <div id="player"></div>
+                    <div id="player">
+                    
+                        <div id="badgeSmall"></div>
+                    </div>
                     <div id="inventory">
                         <!-- img src="../../../images/locals1.png" data-x="72" data-y="84" -->
                 </div>
