--- a/contaePages/naContae1.html
+++ b/contaePages/naContae1.html
@@ -53,7 +53,7 @@
                             <div class="item" id="dealbh">
                                 <div class="item" id="badge">
 
-                                <p id="bearla">Hover on Irish text for English</p>
+                                <p id="bearla"></p>
                             </div>
 
 
@@ -66,8 +66,10 @@
 
                     <div id="output">Co. Uíbh Fhailí</div>
                     <div id="grid"></div>
+                    <div id="player">
+                    
                     <div id="badgeSmall"></div>
-                    <div id="player"></div>
+                    </div>
                     <div id="inventory">
                         <!-- img src="../../../images/locals1.png" data-x="72" data-y="84" -->
                 </div>
