--- a/contaePages/naContae10.html
+++ b/contaePages/naContae10.html
@@ -56,7 +56,7 @@ z..~....8888888^^^^^88z...***........***.~~888888888888888888888888888
                             <div class="item" id="dealbh">
                                 <div class="item" id="badge"</div>
 
-                                <p id="bearla">Hover on Irish text for English</p>
+                                <p id="bearla"></p>
                             </div>
 
 
@@ -69,7 +69,9 @@ z..~....8888888^^^^^88z...***........***.~~888888888888888888888888888
 
                     <div id="output">Co. Chorcaí</div>
                     <div id="grid"></div>
-                    <div id="player"></div>
+                    <div id="player">
+                        <div id="badgeSmall"></div>
+                    </div>
                     <div id="inventory">
                         <!-- img src="../../../images/locals1.png" data-x="72" data-y="84" -->
                 </div>
