--- a/contaePages/naContae18.html
+++ b/contaePages/naContae18.html
@@ -55,7 +55,7 @@
                             <div class="item" id="dealbh">
                                 <div class="item" id="badge"</div>
 
-                                <p id="bearla">Hover on Irish text for English</p>
+                                <p id="bearla"></p>
                             </div>
 
 
@@ -68,7 +68,9 @@
 
                     <div id="output">Co. Chill Chainnigh</div>
                     <div id="grid"></div>
-                    <div id="player"></div>
+                    <div id="player">
+                        <div id="badgeSmall"></div>
+                    </div>
                     <div id="inventory">
                         <!-- img src="../../../images/locals1.png" data-x="72" data-y="84" -->
                 </div>
