--- a/contaePages/naContae20.html
+++ b/contaePages/naContae20.html
@@ -57,7 +57,7 @@ z........8888888888z..^^^..............*..~~~~~~
                             <div class="item" id="dealbh">
                                 <div class="item" id="badge"</div>
 
-                                <p id="bearla">Hover on Irish text for English</p>
+                                <p id="bearla"></p>
                             </div>
 
 
@@ -70,7 +70,10 @@ z........8888888888z..^^^..............*..~~~~~~
 
                     <div id="output">Co. Chiarraí</div>
                     <div id="grid"></div>
-                    <div id="player"></div>
+                    <div id="player">
+                    
+                                <div id="badgeSmall"></div>
+                    </div>
                     <div id="inventory">
                         <!-- img src="../../../images/locals1.png" data-x="72" data-y="84" -->
                 </div>
