--- a/contaePages/naContae24.html
+++ b/contaePages/naContae24.html
@@ -54,7 +54,7 @@ rrrrrrrr.......^^.........r~~~
                             <div class="item" id="dealbh">
                                 <div class="item" id="badge"</div>
 
-                                <p id="bearla">Hover on Irish text for English</p>
+                                <p id="bearla"></p>
                             </div>
 
 
@@ -67,7 +67,9 @@ rrrrrrrr.......^^.........r~~~
 
                     <div id="output">Co. An Dúin</div>
                     <div id="grid"></div>
-                    <div id="player"></div>
+                    <div id="player">
+                        <div id="badgeSmall"> </div>
+                        </div>
                     <div id="inventory">
                         <!-- img src="../../../images/locals1.png" data-x="72" data-y="84" -->
                 </div>
