--- a/contaePages/naContae6.html
+++ b/contaePages/naContae6.html
@@ -56,7 +56,7 @@ rr.**...*........**.....~~~~~~~~~
                             <div class="item" id="dealbh">
                                 <div class="item" id="badge"</div>
 
-                                <p id="bearla">Hover on Irish text for English</p>
+                                <p id="bearla"></p>
                             </div>
 
 
@@ -69,7 +69,10 @@ rr.**...*........**.....~~~~~~~~~
 
                     <div id="output">Co. Liatroma</div>
                     <div id="grid"></div>
-                    <div id="player"></div>
+                    <div id="player">
+                    
+                        <div id="badgeSmall"></div>
+                    </div>
                     <div id="inventory">
                         <!-- img src="../../../images/locals1.png" data-x="72" data-y="84" -->
                 </div>
