Implement places on map. Add places resources for Cork.

--- a/contaePages/naContae10.html
+++ b/contaePages/naContae10.html
@@ -68,6 +68,7 @@ z..~....8888888^^^^^88z...***........***.~~888888888888888888888888888
             </div>
 
                     <div id="output">Co. Chorcaí</div>
+                    <div id="places"></div>
                     <div id="grid"></div>
                     <div id="player">
                         <div id="badgeSmall"></div>
