--- a/contaePages/naContae10.html
+++ b/contaePages/naContae10.html
@@ -14,7 +14,7 @@
 88888880888888888888888...............rrrrrrrrr...................tt~~
 88898888888887888888888rr..........rrrr.......rrrrrrrr...rrrrrrrrrrt~~
 8888808888888888888888z.rrrrrrrrrrrr.................rrrrr.........t~~
-88888888888888888888888z...........***...................***.......t~~
+88888888888888888888888z....1......***..2................***.......t~~
 888888888888088888888888z..........^^****^^^^^^^MMMM^.***..........ttt
 8888888888888888888878888z.....^^^^^^^MM********MMM^***..............t
 88888888888898888888888888z.^^^^^MMMMMMMMMMM^^^****.*................t
@@ -68,7 +68,7 @@ z..~....8888888^^^^^88z...***........***.~~888888888888888888888888888
             </div>
 
                     <div id="output">Co. Chorcaí</div>
-                    <div id="places"></div>
+                    <div id="place" class="places"></div>
                     <div id="grid"></div>
                     <div id="player">
                         <div id="badgeSmall"></div>
