--- a/contaePages/naContae10.html
+++ b/contaePages/naContae10.html
@@ -12,26 +12,26 @@
 8888888887888888888z...............~.............~~~~..........tt~~~~~
 888888888888888888z.............................................tt~~~~
 88888880888888888888888...............rrrrrrrrr...................tt~~
-88898888888887888888888rr..........rrrr.......rrrrrrrr...rrrrrrrrrrt~~
+88898888888887888888888rr.....W....rrrr..E....rrrrrrrr...rrrrrrrrrrt~~
 8888808888888888888888z.rrrrrrrrrrrr.................rrrrr.........t~~
-88888888888888888888888z....1......***..2................***.......t~~
-888888888888088888888888z..........^^****^^^^^^^MMMM^.***..........ttt
+88888888888888888888888z....R......***..T................***.......t~~
+888888888888088888888888z.....Y....^^****^^^^^^^MMMM^.***..........ttt
 8888888888888888888878888z.....^^^^^^^MM********MMM^***..............t
 88888888888898888888888888z.^^^^^MMMMMMMMMMM^^^****.*................t
 88888888888888888888889088z^^^^MMMMMMM^^^^^^^^....***................t
 88888888888888888887888888z^^MMM^^^^^^^............**...............88
 8888888888888888888888888z.^M^^..rrrrrrrrrr.........**..~~~.......~888
-888888988888888888888z..........rr........rrrrrrrrrrrrr~~~~......~8888
-8888888888888888z...............rrr.............^^^.*....~~~...~888888
-88888z^88888z.....................rr......^^MMM^^^.**....~888888878888
+888888988888888888888z.......U..rr........rrrrrrrrrrrrr~~~~......~8888
+8888888888888888z.........I.....rrr.............^^^.*....~~~...~888888
+88888z^88888z.....................rr......^^MMM^^^.**.O..~888888878888
 888z^^^8888.......rrrrrrrrrrr.....rr....^^MMM^^^^***....~8888088888888
 88z^^^88rrrrrrrrrrr.........rrrrrrr..^^^MMM^^^****......~8888888888888
 8z^^^^...^^^^^^****...............^^^MMMM^^****.......8888888898888888
-8z^^.^^^^^^^^^^^..***^^^......^^^^MMMM^^^***......~8888888888888888888
+8z^^.^^^^^^^^^^^..***^^^...Q..^^^^MMMM^^^***......~8888888888888888888
 ^^^^^^^^^^^.....~...**^.....^^^MMMM^^^^***.......~88888888888888888888
 ^^^^^^.......~~~..^^.**...^^^.MMM^^^..**.........~88888888888888888888
 8z.^^^^...88888.^^^^^^^^**..^^^^^^^....*..~888888888888888888888888888
-z..~....8888888^^^^^88z...***........***.~~888888888888888888888888888
+z..~....8888888^^^^^88z...***.....P..***.~~888888888888888888888888888
 .....8888888888^^^.888z.....**********....~888888888888888888888888888
 8888888888z^^^^^888z.....................88888888888888888888888888888
 8888888888888888z.......~......8888...88888888888888888888888888888888
@@ -50,6 +50,7 @@ z..~....8888888^^^^^88z...***........***.~~888888888888888888888888888
     <div class="parent">
             <div class ="item">
                 <div id="left-panel">
+                    <div id="locationDetail"></div>
                                    <h1 id="title"></h1>
                         <div id="shield-holder">
 
