--- a/contaePages/naContae10.html
+++ b/contaePages/naContae10.html
@@ -9,34 +9,34 @@
 
 88888888888888888888888~ttttttttt~~~~~tttttttttt~~~~~~~~tttttt~~~~~~~~
 888888888888888888888z..........ttttttt........tttttttttt....tt~~~~~~~
-8888888887888888888z...............~.............~~~~..........tt~~~~~
+8888888887888888888z...............~.......Y.....~~~~..........tt~~~~~
 888888888888888888z.............................................tt~~~~
-88888880888888888888888...............rrrrrrrrr...................tt~~
-88898888888887888888888rr.....W....rrrr..E....rrrrrrrr...rrrrrrrrrrt~~
-8888808888888888888888z.rrrrrrrrrrrr.................rrrrr.........t~~
-88888888888888888888888z....R......***..T................***.......t~~
+88888880888888888888888...............rrrrrrrrr...........O.......tt~~
+88898888888887888888888rr..........rrrr.......rrrrrrrr...rrrrrrrrrrt~~
+8888808888888888888888z.rrrrrrrrrrrr.......U.........rrrrr.........t~~
+88888888888888888888888z...........***...................***.......t~~
 888888888888088888888888z.....Y....^^****^^^^^^^MMMM^.***..........ttt
 8888888888888888888878888z.....^^^^^^^MM********MMM^***..............t
-88888888888898888888888888z.^^^^^MMMMMMMMMMM^^^****.*................t
+88888888888898888888888888z.^^^^QMMMMMMMMMMM^^^****.*................t
 88888888888888888888889088z^^^^MMMMMMM^^^^^^^^....***................t
 88888888888888888887888888z^^MMM^^^^^^^............**...............88
-8888888888888888888888888z.^M^^..rrrrrrrrrr.........**..~~~.......~888
-888888988888888888888z.......U..rr........rrrrrrrrrrrrr~~~~......~8888
-8888888888888888z.........I.....rrr.............^^^.*....~~~...~888888
-88888z^88888z.....................rr......^^MMM^^^.**.O..~888888878888
-888z^^^8888.......rrrrrrrrrrr.....rr....^^MMM^^^^***....~8888088888888
+8888888888888888888888888z.^M^^..rrrrrrrrrr......E..**..~~~I......~888
+888888988888888888888z..........rr........rrrrrrrrrrrrr~~~~......~8888
+8888888888888888z...............rrr.............^^^.*....~~~...~888888
+88888z^88888z.....................rr......^^MMM^^^.**....~888888878888
+888z^^^8888.......rrrrrrrrrrr.....rr...R^^MMM^^^^***....~8888088888888
 88z^^^88rrrrrrrrrrr.........rrrrrrr..^^^MMM^^^****......~8888888888888
-8z^^^^...^^^^^^****...............^^^MMMM^^****.......8888888898888888
-8z^^.^^^^^^^^^^^..***^^^...Q..^^^^MMMM^^^***......~8888888888888888888
-^^^^^^^^^^^.....~...**^.....^^^MMMM^^^^***.......~88888888888888888888
-^^^^^^.......~~~..^^.**...^^^.MMM^^^..**.........~88888888888888888888
-8z.^^^^...88888.^^^^^^^^**..^^^^^^^....*..~888888888888888888888888888
-z..~....8888888^^^^^88z...***.....P..***.~~888888888888888888888888888
-.....8888888888^^^.888z.....**********....~888888888888888888888888888
-8888888888z^^^^^888z.....................88888888888888888888888888888
-8888888888888888z.......~......8888...88888888888888888888888888888888
-88888888888888z.....888z.......888888888888888888888888888888888888888
-8888888888888888888888......888888888888888888888888888888888888888888
+8z^^^^...^^^^^^****...............^^^MMMM^^****.......P888888898888888
+8z^^.^^^^^^^^^^^..***^^^......^^^^MMMM^^^***......~8888888889888888888
+^^^^^^^^^^^.....~T..**^.....^^^MMMM^^^^***.......~88888888888888888888
+^^^^^^.......~~~..^^.**...^^^.MMM^^^..**.........~88887088888888888888
+8z.^^^^...87888.^^^^^^^^**..^^^^^^^....*..~888888888888888888888888888
+z..~....0889788^^^^^88z...***........***.~~888888088888888888888888888
+.....8989870888^^^.888z.....**********....~888888888888888888888888888
+8888887888z^^^^^888z.....................88888888888888888888888888888
+8888888879808888z.......~W.....8888...88888888888888888888888888888888
+88888808887888z.....888z.......888888888888888888888888888888888888888
+8888888898888888888888......888888888888888888888888888888888888888888
 
     
     </div>
