Implement location highlighting in Co.Cork

--- a/contaePages/naContae10.html
+++ b/contaePages/naContae10.html
@@ -15,7 +15,7 @@
 88898888888887888888888rr..........rrrr.......rrrrrrrr...rrrrrrrrrrt~~
 8888808888888888888888z.rrrrrrrrrrrr.......U.........rrrrr.........t~~
 88888888888888888888888z...........***...................***.......t~~
-888888888888088888888888z.....Y....^^****^^^^^^^MMMM^.***..........ttt
+888888888888088888888888z..........^^****^^^^^^^MMMM^.***..........ttt
 8888888888888888888878888z.....^^^^^^^MM********MMM^***..............t
 88888888888898888888888888z.^^^^QMMMMMMMMMMM^^^****.*................t
 88888888888888888888889088z^^^^MMMMMMM^^^^^^^^....***................t
