Add function to console.log current tile character.

--- a/contaePages/naContae10.html
+++ b/contaePages/naContae10.html
@@ -51,21 +51,22 @@ z..~....0889788^^^^^88z...***........***.~~888888088888888888888888888
             <div class ="item">
                 <div id="left-panel">
                     <div id="locationDetail"></div>
-                                   <h1 id="title"></h1>
+
+                    <div id="deetsFrame"></div> 
                         <div id="shield-holder">
 
                             <div class="item" id="dealbh">
                                 <div class="item" id="badge"</div>
 
                                 <p id="bearla"></p>
+
                             </div>
 
 
 
                         </div>
                 </div>
-
-     
+                    <h1 id="title"></h1>
             </div>
 
                     <div id="output">Co. Chorcaí</div>
