Add detailtView to all maps

--- a/contaePages/naContae11.html
+++ b/contaePages/naContae11.html
@@ -49,7 +49,10 @@
     <div class="parent">
             <div class ="item">
                 <div id="left-panel">
-                                   <h1 id="title"></h1>
+                                                       <div id="locationDetail"></div>
+
+                    <div id="deetsFrame"></div> 
+ <h1 id="title"></h1>
                         <div id="shield-holder">
 
                             <div class="item" id="dealbh">
