--- a/contaePages/naContae14.html
+++ b/contaePages/naContae14.html
@@ -48,6 +48,9 @@ z....888z.^^MM^^^^........*****..****.....~
     <div class="parent">
             <div class ="item">
                 <div id="left-panel">
+                    <div id="locationDetail"></div>
+
+                    <div id="deetsFrame"></div> 
                                    <h1 id="title"></h1>
                         <div id="shield-holder">
 
