--- a/contaePages/naContae13.html
+++ b/contaePages/naContae13.html
@@ -49,6 +49,10 @@
     <div class="parent">
             <div class ="item">
                 <div id="left-panel">
+
+                    <div id="locationDetail"></div>
+
+                    <div id="deetsFrame"></div> 
                                    <h1 id="title"></h1>
                         <div id="shield-holder">
 
