--- a/contaePages/naContae20.html
+++ b/contaePages/naContae20.html
@@ -52,6 +52,9 @@ z........8888888888z..^^^..............*..~~~~~~
             <div class ="item">
                 <div id="left-panel">
                                    <h1 id="title"></h1>
+                    <div id="locationDetail"></div>
+
+                    <div id="deetsFrame"></div> 
                         <div id="shield-holder">
 
                             <div class="item" id="dealbh">
