--- a/contaePages/naContae22.html
+++ b/contaePages/naContae22.html
@@ -45,6 +45,9 @@ z.........*...^^^^^^^^^^^^rrrrrr..***........
             <div class ="item">
                 <div id="left-panel">
                                    <h1 id="title"></h1>
+                    <div id="locationDetail"></div>
+
+                    <div id="deetsFrame"></div> 
                         <div id="shield-holder">
 
                             <div class="item" id="dealbh">
