--- a/contaePages/naContae34.html
+++ b/contaePages/naContae34.html
@@ -50,6 +50,9 @@
     <div class="parent">
             <div class ="item">
                 <div id="left-panel">
+                    <div id="locationDetail"></div>
+
+                    <div id="deetsFrame"></div> 
                                    <h1 id="title"></h1>
                         <div id="shield-holder">
 
