--- a/contaePages/naContae4.html
+++ b/contaePages/naContae4.html
@@ -49,6 +49,9 @@
             <div class ="item">
                 <div id="left-panel">
                                    <h1 id="title"></h1>
+                    <div id="locationDetail"></div>
+
+                    <div id="deetsFrame"></div> 
                         <div id="shield-holder">
 
                             <div class="item" id="dealbh">
