--- a/contaePages/naContae7.html
+++ b/contaePages/naContae7.html
@@ -50,6 +50,9 @@ rr..**^^^^^^^**^^^^^^.MM.~~~~~
             <div class ="item">
                 <div id="left-panel">
                                    <h1 id="title"></h1>
+                    <div id="locationDetail"></div>
+
+                    <div id="deetsFrame"></div> 
                         <div id="shield-holder">
 
                             <div class="item" id="dealbh">
